# GeneralisedIsotonicRegression

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  pyproject.toml  setup.py
.github/workflows/: c-cpp.yml
GeneralisedIsotonicRegression/: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
GeneralisedIsotonicRegression/cli/: CMakeLists.txt  gir.cpp  gir.h
GeneralisedIsotonicRegression/example/: CMakeLists.txt  main.cpp
GeneralisedIsotonicRegression/isotonic_regression/: CMakeLists.txt
GeneralisedIsotonicRegression/isotonic_regression/include/: generalized_isotonic_regression.h  utility.h
GeneralisedIsotonicRegression/isotonic_regression/src/: generalized_isotonic_regression.cpp  loss.cpp  utility.cpp
GeneralisedIsotonicRegression/tests/: CMakeLists.txt  test_generalized_isotonic_regression.cpp  test_utility.cpp
benchmarks/: CMakeLists.txt  benchmark.cpp
cli/: CMakeLists.txt  gir.cpp  gir.h
example/: CMakeLists.txt
isotonic_regression/: CMakeLists.txt
isotonic_regression/include/: generalized_isotonic_regression.h  loss.h  utility.h
isotonic_regression/src/: generalized_isotonic_regression.cpp
python/: CMakeLists.txt  lib.cpp
python/examples/: multiple_dimension.py  requirements.txt  single_dimension.py
tests/: CMakeLists.txt  test_generalized_isotonic_regression.cpp  test_utility.cpp
webassembly/: CMakeLists.txt  gir.cpp  gir.h
